--- a/deployments/charts/router/templates/router-service.yaml
+++ b/deployments/charts/router/templates/router-service.yaml
@@ -14,6 +14,8 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 
+{{- $routerServiceAccount := default (include "router.serviceAccountName" .) .Values.services.service.serviceAccountName }}
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -65,7 +67,7 @@ spec:
       {{- end }}
       imagePullSecrets:
       - name: {{ .Values.global.imagePullSecret }}
-      serviceAccountName: {{ .Values.services.service.serviceAccountName | default "default" }}
+      serviceAccountName: {{ $routerServiceAccount }}
       {{- with .Values.services.service.initContainers }}
       initContainers:
       {{- toYaml . | nindent 6 }}
