Add syncronize to PR description check activity types (#86)
* Add syncronize to PR description check activity types

* Trigger workflows

--- a/.github/workflows/pr-description-check.yaml
+++ b/.github/workflows/pr-description-check.yaml
@@ -18,8 +18,12 @@ name: PR Description Check
 
 on:
   pull_request:
-    types: [opened, reopened, edited]
+    types: [opened, synchronize, reopened, edited]
     branches: [main]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
 
 jobs:
   validate-pr-description:
